# indapa-CellXGene

./: CellXGene_utils.py  Dockerfile  README.md  cellType_onotology_term.py  cellXgene_backend_utils.py  cellXgene_census_mean_exp.py  cellXgene_streamlit.py  cell_type_ontology.json  constants.py  dag-20250404-18144393.html  main.nf  nextflow.config  nextflow_schema.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
ExampleData/: skin_of_body_B_cell_reformatted.csv  skin_of_body_Langerhans_cell_reformatted.csv  skin_of_body_Merkel_cell_reformatted.csv  skin_of_body_T_cell_reformatted.csv  skin_of_body_basal_cell_of_epidermis_reformatted.csv  skin_of_body_basal_cell_reformatted.csv  skin_of_body_common_dendritic_progenitor_reformatted.csv  skin_of_body_contractile_cell_reformatted.csv  skin_of_body_dendritic_cell_reformatted.csv  skin_of_body_endothelial_cell_of_lymphatic_vessel_reformatted.csv  skin_of_body_endothelial_cell_of_vascular_tree_reformatted.csv  skin_of_body_endothelial_cell_reformatted.csv  skin_of_body_epidermal_Langerhans_cell_reformatted.csv  skin_of_body_epidermal_cell_reformatted.csv  skin_of_body_epithelial_cell_of_sweat_gland_reformatted.csv  skin_of_body_epithelial_cell_reformatted.csv  skin_of_body_erythrocyte_reformatted.csv  skin_of_body_fibroblast_reformatted.csv  skin_of_body_glial_cell_reformatted.csv  skin_of_body_granular_cell_of_epidermis_reformatted.csv  skin_of_body_group_2_innate_lymphoid_cell_reformatted.csv  skin_of_body_group_3_innate_lymphoid_cell_reformatted.csv  skin_of_body_monocyte_reformatted.csv  (+98 more)
(+5 files in other folders)
